tests/tokenizer/string_unterminated.expected
<string>:1:1: error: unterminated string literal
"unterminated string
^^^^^^^^^^^^^^^^^^^^
